# comdirect-api

./: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: sync.yml
api/: auth.py  client.py  main.py  swagger.json  utils.py
api/models/: accounts.py  auth.py
docs/: ARCHITECTURE.md  comdirect_REST_API_Dokumentation.md  multi-account-settings.md
examples/: logging_config.py
functions/sync/: function_app.py  mongo_repo.py  run.py  settings.py  sync_service.py
src/comdirect_api/: client.py  main.py  settings.py  utils.py
src/comdirect_api/core/: settings.py
src/comdirect_api/models/: __init__.py  accounts.py  auth.py  base.py  depots.py  instruments.py  messages.py  orders.py  reports.py  transactions.py
tests/: conftest.py  test_auth.py  test_banking.py  test_brokerage.py  test_client.py  test_factory.py  test_messages.py  test_orders.py  test_reports.py  test_sync_service.py  test_tan_flow.py  test_tan_polling.py  test_validation_errors.py
